[package]
name = "reddit-api"
version = "0.1.2"
authors = ["Aaron Seilis <aaron.seilis@seilis.ca>", "Aurora0001 <aurora01@safe-mail.net>"]
license = "MIT"
repository = "https://github.com/seilis/reddit-api"
description = "Rust API Wrapper for Reddit"
build = "build.rs"
exclude = [
  "**/*.out",
  "**/*.lock",
  "**/*.yml",
  "**/*.sh"
]

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.3"
serde = "0.7.14"
serde_json = "0.7.4"
